syntax = "proto3";

package proto_aluno;

/* ### Instrução para gerar o arquivo .go desse arquivo
    1º: Abrir uma janela do prompt de comando nessa pasta atual onde está o arquivo .proto
    2º Executar o comando:
        > protoc --go_opt=paths=source_relative --go_out=plugins=grpc:. grpc_aluno.proto
*/

service ServiceAluno {
    rpc Create (CreateAlterRequest) returns (CreateAlterResponse) {}
    rpc Alter (CreateAlterRequest) returns (CreateAlterResponse) {}
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc GetAll (GetAllRequest) returns (GetAllResponse) {}
    rpc Delete (DeleteRequest) returns (DeleteResponse) {}
    rpc StatusService (StatusServiceRequest) returns (StatusServiceResponse) {}
}

message Aluno {
    string ra = 1;
    string nome = 2;
    string email = 3;
    string celular = 4;
}

message CreateAlterRequest {
    Aluno aluno = 1;
}

message CreateAlterResponse {
    bool status = 1;    
    string error = 2;
}

message GetRequest {
    string ra = 1;
}

message GetResponse {
    Aluno aluno = 1;
    bool status = 2;    
    string error = 3;
}

message GetAllRequest {
    uint32 page = 1;
}

message GetAllResponse {
    bool status = 1;    
    string error = 2;
    repeated Aluno alunos = 3;
}

message DeleteRequest {
    string ra = 1;
}

message DeleteResponse {
    bool status = 1;    
    string error = 2;
}

message StatusServiceRequest {}

message StatusServiceResponse {
    bool status = 1;    
    string error = 2;
}